--- a/LESSONS/index.html
+++ b/LESSONS/index.html
@@ -29,7 +29,7 @@
     <hr>
     <section id="html">
 
-    <h2>I'm ready to learn HTML</h2>
+    <h2>I'm ready to learn HTML.</h2>
     <p>This is my first web page</p>
 
     <h3>My Daily Schedule</h3>
@@ -38,7 +38,7 @@
         <li>...I  learn more about dev.</li>
         <li>...I plan out my schedule.</li>
         <li>...I use resources from <abbr title="Mozilla Developer Network">
-            <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">MDN</a>
+            <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">MDN.</a>
         </abbr>.</li>
     </ol>
 </section>
@@ -47,8 +47,8 @@
 
     <section id="vacation">
 
-    <h2>I am also planning a vacation</h2>
-    <p>I've been working hard and <em>really need a getaway</em>.</p>
+    <h2>I am also planning a vacation.</h2>
+    <p>I've been working hard and <em>really need a getaway.</em>.</p>
     <p>I live in <abbr title="NIgeria">NIG</abbr> so I want to visit a beach in the Bahamas.</p>
 
     <h3>Places I'd like to visit</h3>
@@ -73,7 +73,7 @@
     <h3>Places I want to avoid</h3>
     <dl>
         <dt>North Pole</dt>
-        <dd>I hear this place is <strong>cold</strong></dd>
+        <dd>I hear this place is <strong>cold.</strong></dd>
 
         <dt>South Pole</dt>
         <dd>This also is cold.</dd>
@@ -89,7 +89,7 @@
 
 
     <p>
-        <a href="#">Back to Top</a>
+        <a href="#">Back to Top.</a>
     </p>
 </body>
 </html>
